# gymbot

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  fly.toml  handlers.py  heroku.yml  main.py  pyproject.toml  storage.pickle
.github/workflows/: fly.yml
handlers/: __init__.py  ai_coach.py  ai_template.py  common.py  history.py  settings.py  start.py  template.py  workout.py
tests/: conftest.py  test_ai_coach.py  test_ai_handler.py  test_handlers.py
